Put Y axes on the left

--- a/src/test/resources/hardware-exploration-chart-template.html
+++ b/src/test/resources/hardware-exploration-chart-template.html
@@ -84,7 +84,7 @@
                         {
                             type: "linear",
                             display: true,
-                            position: "right",
+                            position: "left",
                             id: "error-rate-axis",
                             scaleLabel: {
                                 display: true,
@@ -130,7 +130,7 @@
                         {
                             type: "linear",
                             display: true,
-                            position: "right",
+                            position: "left",
                             id: "throughput-axis",
                             scaleLabel: {
                                 display: true,
