Improve axes label units

--- a/src/test/resources/hardware-exploration-chart-template.html
+++ b/src/test/resources/hardware-exploration-chart-template.html
@@ -45,7 +45,7 @@
                             position: "left",
                             scaleLabel: {
                                 display: true,
-                                labelString: "Apdex"
+                                labelString: "Apdex [0-1]"
                             },
                             id: "y-axis-0",
                             ticks: {
@@ -135,7 +135,7 @@
                             id: "y-axis-0",
                             scaleLabel: {
                                 display: true,
-                                labelString: "HTTP / s"
+                                labelString: "HTTP throughput [requests / s]"
                             },
                             ticks: {
                                 min: 0
