Improve the chart tooltip

--- a/src/test/resources/hardware-exploration-chart-template.html
+++ b/src/test/resources/hardware-exploration-chart-template.html
@@ -59,6 +59,13 @@
                             }
                         }
                     ]
+                },
+                tooltips: {
+                    callbacks: {
+                        title: function(tooltipItems) {
+                            return tooltipItems[0].xLabel + " Jira nodes";
+                        }
+                    }
                 }
             }
         }
@@ -100,6 +107,13 @@
                             }
                         }
                     ]
+                },
+                tooltips: {
+                    callbacks: {
+                        title: function(tooltipItems) {
+                            return tooltipItems[0].xLabel + " Jira nodes";
+                        }
+                    }
                 }
             }
         }
@@ -141,6 +155,13 @@
                             }
                         }
                     ]
+                },
+                tooltips: {
+                    callbacks: {
+                        title: function(tooltipItems) {
+                            return tooltipItems[0].xLabel + " Jira nodes";
+                        }
+                    }
                 }
             }
         }
