QUICK-117: Fit error bars within the chart
Switch from local `Throughput` to imported `TemporalRate`.
Show full Apdex domain from 0 to 1.

--- a/src/test/resources/hardware-exploration-chart-template.html
+++ b/src/test/resources/hardware-exploration-chart-template.html
@@ -47,7 +47,8 @@
                             },
                             id: "y-axis-0",
                             ticks: {
-                                min: 0
+                                min: 0,
+                                max: '<%= maxApdex =%>'
                             }
                         }
                     ],
@@ -95,7 +96,8 @@
                                 labelString: "error rate [%]"
                             },
                             ticks: {
-                                min: 0
+                                min: 0,
+                                max: '<%= maxErrorRate =%>'
                             }
                         }
                     ],
@@ -143,7 +145,8 @@
                                 labelString: "HTTP throughput [requests / s]"
                             },
                             ticks: {
-                                min: 0
+                                min: 0,
+                                max: '<%= maxThroughput =%>'
                             }
                         }
                     ],
