QUICK-258: Measure error rates per action label
Pick the max to expose the unacceptable conditions.

--- a/src/test/resources/hardware-exploration-chart-template.html
+++ b/src/test/resources/hardware-exploration-chart-template.html
@@ -80,7 +80,10 @@
                 responsive: true,
                 title: {
                     display: true,
-                    text: '<%= application =%> hardware exploration: error rate'
+                    text: [
+                        '<%= application =%> hardware exploration: max action error rate',
+                        'how broken is the most broken action?'
+                    ]
                 },
                 scales: {
                     yAxes: [
