QUICK-258: Fix [chart edge lines bug]
Now, we often max out on the error rate: 100%, the line got cut off at the top edge.

[chart edge lines bug]: https://github.com/chartjs/Chart.js/issues/4202

--- a/src/test/resources/hardware-exploration-chart-template.html
+++ b/src/test/resources/hardware-exploration-chart-template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title><%= application =%> hardware exploration</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
+    <script src="https://unpkg.com/chart.js@2.8.0/dist/Chart.bundle.min.js"></script>
     <script src="https://unpkg.com/chartjs-plugin-error-bars@1.1.0/build/Plugin.Errorbars.js"></script>
     <style>
         span.commit-flag {
