QUICK-310: Recommend by reliability

--- a/src/test/resources/hardware-recommendation-chart-template.html
+++ b/src/test/resources/hardware-recommendation-chart-template.html
@@ -37,7 +37,7 @@
                 responsive: true,
                 title: {
                     display: true,
-                    text: '<%= application =%> hardware recommendation by Apdex'
+                    text: '<%= application =%> hardware recommendation by Apdex and reliability'
                 },
                 tooltips: {
                     filter: function (tooltipItem) {
